{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "1fa02662-9f71-4626-9d74-9dbaff561951",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "507f40de-ff45-40be-a600-1708c021ab21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rot",
                    "type": "PassThrough",
                    "id": "40ec3813-0c0b-412d-8bb2-745db72d9e86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrabRight",
                    "type": "PassThrough",
                    "id": "2a7a044c-0d48-4540-a3a3-d6b533ea4aa4",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrabLeft",
                    "type": "Button",
                    "id": "b5f62c51-cec7-44ca-a996-d57d3d40b7ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "90ad3000-40ff-4e0a-b15a-44a48d2d568b",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0205018-67f4-4710-a4a7-960f4be852cf",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a897ed6-50ce-4c2d-9f12-3cf5f706986a",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4c1c849-d126-4154-a6b5-49526989cd65",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}